# bloqit-sw-engineering-challenge

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  setup.cfg
src/: bloq.json  manage.py
src/backend/: admin.py  apps.py  enums.py  models.py  swagger.py  urls.py
src/backend/fixtures/: bloqs.json  lockers.json  rents.json
src/backend/migrations/: 0001_initial.py  0002_bloq_locker_rent.py  0003_alter_locker_status_alter_rent_lockerid.py
src/backend/serializers/: bloq.py  locker.py  rent.py  user.py
src/backend/tests/: test_user.py
src/backend/views/: bloq.py  locker.py  rent.py  user.py
src/bloqit/: asgi.py  settings.py  urls.py  wsgi.py
