[metadata]
name = bloqit
version = file: VERSION
description = Code challenge for a python backend developer.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bloqit, code, challenge, python, django, apis, drf
author = Dário Alves
author_email = dario.alv@ua.pt
url = https://github.com/dario-alv/bloqit-sw-engineering-challenge
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Bloqit Software Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
install_requires =
    Django==4.2
    djangorestframework==3.14.0
    drf-spectacular==0.26.4
    python-dotenv==1.0.0

[options.extras_require]
debug =
    django-debug-toolbar==4.2.0
    pre_commit==4.0.1
build =
    setuptools==75.2.0
    wheel==0.44.0
